Add auth swagger api
