# internal/http/lib/schema/response/token.go
@@ -3,3 +3,8 @@ package response
 type AccessToken struct {
 	AccessToken string `json:"access_token"`
 }
+
+type Tokens struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
